--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: RenameCMD
 main: me.nelonn.renamecmd.RenameCMD
 author: Nelonn
-version: 1.0
+version: @version@
 api-version: 1.17
 description: This plugin changes custom model data while player renaming item in anvil
 
